# opencvWork

opencvwork/opencv-ws/stereo-bm/: CMakeLists.txt
opencvwork/opencv-ws/stereo-bm/src/: opencv  stereo-bm.cpp
opencvwork/opencv-ws/stereo-gc/: CMakeLists.txt
opencvwork/opencv-ws/stereo-gc/src/: stereo-GC.cpp
opencvwork/work1/: calibdata.txt  caliberation_result.txt  opca  open_ca.cpp
opencvwork/work3/code/: opencv  stereo-bm-opcv3.cpp  stereo-bm.cpp
